			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04i: *********************************

BUG: (4/5/06, GVG) Another NullPointerException when making certain layers invisible (Bug #920)
FIX: This is not a permanent fix, just detecting that index doesn't go over greekedCell.fadeImageColors.length.

BUG: (4/5/06, GVG) Highlighter selects wrong object when dialog windows are open (Bug #917).
FIX: Error in Highlight2.getInfo(): it changed eobj value.

BUG: (4/5/06, SMR) Export names are not incremented properly (Bug #916).
FIX: In ElectricObject.uniqueObjectNameLow(), check names without case.

IMP: (4/5/06, GVG) Expanding and marking cell in case of giving library in command line (no Bugzilla)

BUG: (4/5/06, GVG) Exception in TopLevel on MacOSX in case of -mdi and reading library from command line.
FIX: desktop instance created before that topLevel. Still unknown why creation of topLevel has problems on MacOXS

IMP: (4/5/06, GVG) Refactoring calling to Progress class. Extra interface added in UserInterface.

BUG: (4/4/06, GVG) Rolling back again those changes in NetworkHighlighter.java:TRIMMEDDISPLAY. The code
becomes extremely slow but affects Bug 716.
FIX: TRIMMEDDISPLAY = true

BUG: (4/3/06, DN) Not Serializable exception in IdManager (Bug #916).
FIX: Make Cell.idManager field transient.

BUG: (4/3/06, GVG) Null exception in Simulation.java if format is not correct but anIt.hasNext() == TRUE.
FIX: test if an==null in Simulation.java;732.

BUG: (4/3/06, GVG) Wrong icon in View->Edit Icon View if more than 1 icon is in the same group (Bug #915)
Cell.otherView() was retrieving first icon found in the group regardless if it belongs to the correct schematics.
FIX. Matching name as well.

IMP: (4/3/06, GVG) Cleaning gateGenerator and moving major regression code to GenerationTest. Gate regressions