@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04i: *********************************
 
+BUG: (4/5/06, GVG) Network highlight does not highlight (Bug #921).
+FIX: Removing dependency on TRIMMEDDISPLAY and make it on currentDepth. It should fix Bug #716.
+
 BUG: (4/5/06, GVG) Another NullPointerException when making certain layers invisible (Bug #920)
 FIX: This is not a permanent fix, just detecting that index doesn't go over greekedCell.fadeImageColors.length.
 
